tests/failing/1-rune-literal-surrogate/main.af
rune: @rune

accept: (value: rune) {
    @exit(0)
}

main: () {
    accept(55296)
}
